# llm-security-gateway

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci-go.yml  ci-python.yml
gateway/: .env.example  Dockerfile  pyproject.toml
gateway/src/llm_security_gateway/: __init__.py  config.py  dependencies.py  main.py  metrics.py
gateway/src/llm_security_gateway/api/middleware/: audit_log.py  rate_limit.py  request_id.py
gateway/src/llm_security_gateway/api/routes/: admin.py  chat.py  health.py  metrics.py
gateway/src/llm_security_gateway/detection/: base.py  engine.py  result.py
gateway/src/llm_security_gateway/detection/data_leakage/: pii_scanner.py  response_filter.py  secret_scanner.py
gateway/src/llm_security_gateway/detection/jailbreak/: pattern_classifier.py  semantic_classifier.py  taxonomy.py
gateway/src/llm_security_gateway/detection/prompt_injection/: heuristic_detector.py  ml_detector.py  rule_detector.py
gateway/src/llm_security_gateway/detection/prompt_injection/rules/: injection_patterns.yaml
gateway/src/llm_security_gateway/llm_clients/: anthropic_client.py  base.py  factory.py  openai_client.py
gateway/src/llm_security_gateway/storage/: database.py  models.py
gateway/tests/unit/: test_anthropic_client.py  test_api_routes.py  test_detection_engine.py  test_heuristic_detector.py  test_jailbreak_pattern.py  test_llm_clients.py  test_ml_detector.py  test_phase4.py  test_response_filter.py  test_rule_detector.py  test_secret_scanner.py  test_semantic_classifier.py
pqc-proxy/: Dockerfile  go.mod  go.sum
pqc-proxy/cmd/proxy/: main.go
pqc-proxy/internal/config/: config.go
pqc-proxy/internal/kem/: hybrid.go  mlkem.go  mlkem_test.go
pqc-proxy/internal/proxy/: reverse_proxy.go
pqc-proxy/internal/transport/: handshake.go  handshake_test.go  session.go  session_store.go
