[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-security-gateway"
version = "0.1.0"
description = "PQC-secured LLM API gateway with prompt injection and jailbreak detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "detect-secrets>=1.5.0",
    "onnxruntime>=1.18.0",
    "transformers>=4.41.0",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.0",
    "sqlalchemy[mypy]>=2.0.0",
    "types-pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_security_gateway"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "RET", "SIM"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=llm_security_gateway --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/llm_security_gateway"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
